--- a/rails-server-app/Gemfile
+++ b/rails-server-app/Gemfile
@@ -5,9 +5,6 @@ ruby "3.2.2"
 # Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
 gem "rails", "~> 7.1.4", ">= 7.1.4.2"
 
-# Use sqlite3 as the database for Active Record
-gem "sqlite3", ">= 1.4"
-
 # Use the Puma web server [https://github.com/puma/puma]
 gem "puma", ">= 5.0"
 
@@ -47,3 +44,4 @@ end
 
 
 gem "redis", "~> 5.3"
+gem "pg"
